# pipewell_confluence-publisher

./: .gitignore  README.md  action.yml  confluence-manifest.yaml  pyproject.toml
.github/workflows/: publish-to-confluence.yml
confluence_publisher/: cli.py  confluence_client.py  converter.py  manifest.py  publisher.py
docs/: ARCHITECTURE.md  BRD.md  DECISIONS.md  DELIVERY_PLAN.md  MANIFEST_SPEC.md  ONBOARDING.md  TRD.md
examples/workflows/: pr-preview.yml  publish.yml
scripts/: build_foundations_cost_summary.py  setup_confluence.py
test-docs/: hello-world.md
tests/: test_converter.py  test_manifest.py  test_publisher.py
tests/fixtures/: sample.md
