[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "confluence-publisher"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "mistletoe>=1.3",
    "requests>=2.31",
    "PyYAML>=6.0",
    "click>=8.1",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "responses>=0.25",
]

[project.scripts]
confluence-publisher = "confluence_publisher.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["confluence_publisher*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
